requirements file is updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,10 @@ torchmetrics
 scikit-image
 opencv-python
 nltk
+python-dotenv
+langchain-openai
+ipykernel
+langchain
+langchain-huggingface
+langchain-community
+langchain-google-genai
