--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,22 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Environment variable files
+.env
+.env.*
+
+# Environments
+.env
+.env.*
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
